syntax = "proto3";

package example;

option java_multiple_files = true;
option java_package = "com.example";

enum ExampleProtoType {
  PROTO_TYPE_UNKNOWN = 0;
  PROTO_TYPE_A = 1;
  PROTO_TYPE_B = 2;
}

message ExampleProto {
  int64 id = 1;
  string name = 2;
  ExampleProtoType proto_type = 3;

  message InnerMessage {
    string string_field = 1;
    int64 number_field = 2;
  }
  repeated InnerMessage inner_messages = 4;
}